Refactored parameters to be Maps of <String,String> instead of <String,Object>